--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,12 @@ on:
   schedule:
   - cron: '15 6 * * 0'
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        type: environment
+        required: true
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,4 +31,3 @@ jobs:
         run: |
           echo "Files in the repository ${{ github.repository }}"
           tree
-  
