--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - run |
         echo "Event that triggered the workflow ${{ github.event_name }}"
-        echo "Current branch: ${{ github.ref }}"
+        echo "Current branch ${{ github.ref }}"
 
       - uses: actions/checkout@v3.3.0
 
@@ -31,3 +31,44 @@ jobs:
         run: |
           echo "Files in the repository ${{ github.repository }}"
           tree
+Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Test
+    steps:
+      - run: echo "Testing..."
+
+Load-Test:
+  runs-on: ubuntu-latest
+  if: github.event_name == 'workflow_dispatch'
+  needs: Build
+  environment: Load-Test
+  steps:
+    - run: |
+        echo "Testing..."
+        sleep 15
+
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Test, Load-Test]
+    environment:
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo "Step 1 deploying..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 2 deploying..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 3 deploying..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 4 deploying..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 5 deploying..."
+          sleep 10
