--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,4 +1,5 @@
 name: GitHub Actions Demo
+
 on:
   push:
     branches:
@@ -18,12 +19,12 @@ on:
         required: true
   
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps:
-      - run |
-        echo "Event that triggered the workflow ${{ github.event_name }}"
-        echo "Current branch ${{ github.ref }}"
+      - run: |
+          echo "Event that triggered the workflow: ${{ github.event_name }}."
+          echo "Current branch: ${{ github.ref }}."
 
       - uses: actions/checkout@v3.3.0
 
@@ -31,7 +32,8 @@ jobs:
         run: |
           echo "Files in the repository ${{ github.repository }}"
           tree
-Test:
+
+  Test:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     needs: Build
@@ -39,15 +41,15 @@ Test:
     steps:
       - run: echo "Testing..."
 
-Load-Test:
-  runs-on: ubuntu-latest
-  if: github.event_name == 'workflow_dispatch'
-  needs: Build
-  environment: Load-Test
-  steps:
-    - run: |
-        echo "Testing..."
-        sleep 15
+  Load-Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Load-Test
+    steps:
+      - run: |
+          echo "Testing..."
+          sleep 15
 
   Production:
     runs-on: ubuntu-latest
@@ -61,14 +63,14 @@ Load-Test:
           echo "Step 1 deploying..."
           sleep 10
       - run: |
-          echo "🚀 Step 2 deploying..."
+          echo "Step 2 deploying..."
           sleep 10
       - run: |
-          echo "🚀 Step 3 deploying..."
+          echo "Step 3 deploying..."
           sleep 10
       - run: |
-          echo "🚀 Step 4 deploying..."
+          echo "Step 4 deploying..."
           sleep 10
       - run: |
-          echo "🚀 Step 5 deploying..."
+          echo "Step 5 deploying..."
           sleep 10
